router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me { username name { first last }}}\").await"
---

