router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__plan_invalid_query_errors.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: plan_errors.errors
---
[
    PlanError {
        message: Some(
            "Fragment \"UnusedTestFragment\" is never used.",
        ),
        extensions: Some(
            PlanErrorExtensions {
                code: "GRAPHQL_VALIDATION_FAILED",
                exception: None,
            },
        ),
        validation_error: true,
    },
]
