router/apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__plan_root.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: plan.root
---
Fetch(
    FetchNode {
        service_name: "accounts",
        requires: [],
        variable_usages: [],
        operation: "{me{name{first last}}}",
        operation_name: None,
        operation_kind: Query,
        id: None,
        input_rewrites: None,
        output_rewrites: None,
    },
)
